--- a/modelo_copin/app/q1.tex
+++ b/modelo_copin/app/q1.tex
@@ -1,12 +1,12 @@
 %!TEX root = ../main_mestrado.tex
 
 \begin{landscape}
-\chapter{Sumário da primeira pergunta de pesquisa}
+\chapter{Resultados estatísticos para a primeira pergunta de pesquisa}
 \label{app:q1}
 
 \small
-* = Diferença entre médias. \\
-** = Diferença entre medianas. \\
+* = Diferença entre a média das mulheres e a média dos homens. \\
+*** = Diferença entre a mediana das mulheres e a mediana dos homens. \\
 **** = \textit{P-valor} do teste de hipótese utilizado. 
 
 \begin{longtabu}{@{}
@@ -125,6 +125,6 @@ workplace        & professional       & 4.31                      & 1.00        
 writers          & life-arts          & 11.21                     & 0.00                        & 0.00            & 20.89                      & 0.00                         & 0.86             & 31.73                           & 0.00                              & 0.19                  & -0.37                       & 0.00                          & 0.52              \\ \bottomrule
 
 
-\caption[Sumário do número de contribuições]{Para cada comunidade apresentamos nesta tabela sua categoria, a diferença da média de respostas / comentários / contribuições / perguntas realizadas por usuários de cada gênero; a diferença da mediana de respostas / comentários / contribuições / perguntas realizadas por usuários de cada gênero; e o \textit{p-valor} obtido utilizando o Mann-Whitney-U test, para cada tipo de contribuição, para cada gênero.}
+\caption[Resultados estatísticos para o número de contribuições]{Para cada comunidade apresentamos nesta tabela sua categoria, a diferença entre a média de mulheres e homens quanto ao número de respostas / comentários / contribuições / perguntas realizadas por usuários de cada gênero; a diferença entre a mediana de mulheres e homens quanto ao número de respostas / comentários / contribuições / perguntas realizadas por usuários de cada gênero; e o \textit{p-valor} obtido utilizando o Mann-Whitney-U test, para cada tipo de contribuição, para cada gênero.}
 \end{longtabu}
 \end{landscape}
