--- a/modelo_copin/app/q2.tex
+++ b/modelo_copin/app/q2.tex
@@ -1,11 +1,11 @@
 %!TEX root = ../main_mestrado.tex
 \begin{landscape}
 
-\chapter{Sumário da segunda pergunta de pesquisa}
+\chapter{Resultados estatísticos para a segunda pergunta de pesquisa}
 \label{app:q2}
 \small
-* = Diferença entre médias. \\
-** = Diferença entre medianas. \\
+* = Diferença entre a média das mulheres e a média dos homens. \\
+*** = Diferença entre a mediana das mulheres e a mediana dos homens. \\
 **** = \textit{P-valor} do teste de hipótese utilizado. 
 
 \begin{longtabu}{@{}
@@ -116,7 +116,7 @@ wordpress        & technology         & 0.08                        & 0.12      
 workplace        & professional       & 0.02                        & 0.00                          & 0.30              & 0.12                            & 0.26                              & 0.06                  & 2.55                             & 2.00                               & 0.08                   \\
 writers          & life-arts          & 0.12                        & 0.13                          & 0.00              & 0.32                            & 0.45                              & 0.01                  & 0.17                             & 1.00                               & 0.33                   \\ \bottomrule
 
-\caption[Sumário da qualidade das contribuições]{Para cada comunidade apresentamos nesta tabela sua categoria, a diferença da taxa de aceitação das respostas / utilidade média das respostas / média dos votos das perguntas realizadas por usuários de cada gênero; a diferença dataxa de aceitação das respostas / utilidade média das respostas / média dos votos das perguntas realizadas por usuários de cada gênero; e o \textit{p-valor} obtido utilizando o Mann-Whitney-U test, para cada métrica de qualidade, para cada gênero.}
+\caption[Resultados estatísticos para a qualidade das contribuições]{Para cada comunidade apresentamos nesta tabela sua categoria, a diferença entre a média de mulheres e homens quanto a taxa de aceitação das respostas / utilidade média das respostas / média dos votos das perguntas realizadas por usuários de cada gênero; a diferença entre a mediana de mulheres e homens quanto a taxa de aceitação das respostas / utilidade média das respostas / média dos votos das perguntas realizadas por usuários de cada gênero; e o \textit{p-valor} obtido utilizando o Mann-Whitney-U test, para cada métrica de qualidade, para cada gênero.}
 
 \end{longtabu}
 \end{landscape}
