--- a/modelo_copin/app/q4.tex
+++ b/modelo_copin/app/q4.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../main_mestrado.tex
-\chapter{Sumário da quarta pergunta de pesquisa}
+\chapter{Resultados estatísticos para a quarta pergunta de pesquisa}
 \label{app:q4}
 
 \small
@@ -10,7 +10,7 @@
 	P{0.15\linewidth}
 	P{0.13\linewidth}@{}}
 \toprule
-\textit{Comunidade}        & \textit{Categoria}    & \textit{Coeficiente} & \textit{p-value} & $r^2$ \\ \midrule
+\textit{Comunidade}        & \textit{Categoria}    & \textit{Coeficiente} & \textit{p-value} & $R^2$ \\ \midrule
 \endhead
 
 \\ \hline
@@ -105,7 +105,7 @@ wordpress        & technology         & 0.00        & 0.21          & 0.21      
 workplace        & professional       & 0.01        & 0.55          & 0.13           \\
 writers          & life-arts          & 0.02        & 0.15          & 0.31           \\ \bottomrule
 
-\caption[Sumário das contribuições ao longo do tempo]{Para cada comunidade apresentamos nesta tabela sua categoria e os resultados da regressão simples onde verificamos se a proporção de contribuições provenientes de mulheres tem aumentado ao longo do tempo. Especificamente, são mostrados o coeficiente do modelo, o p-valor e o $r^2$ da regressão.}
+\caption[Resultados estatísticos para as contribuições ao longo do tempo]{Para cada comunidade apresentamos nesta tabela sua categoria e os resultados da regressão simples onde verificamos se a proporção de contribuições provenientes de mulheres tem aumentado ao longo do tempo. Especificamente, são mostrados o coeficiente do modelo, o p-valor do coeficiente e o $R^2$ da regressão.}
 \end{longtabu}
 
 \small
@@ -116,7 +116,7 @@ writers          & life-arts          & 0.02        & 0.15          & 0.31      
 	P{0.15\linewidth}
 	P{0.13\linewidth}@{}}
 \toprule
-\textit{Comunidade}        & \textit{Categoria}           & \textit{Coeficiente} & \textit{p-value} & $r^2$ \\ \midrule
+\textit{Comunidade}        & \textit{Categoria}           & \textit{Coeficiente} & \textit{p-value} & $R^2$ \\ \midrule
 \endhead
 
 \\ \hline
@@ -210,5 +210,5 @@ wordpress        & technology         & 0.00        & 0.04          & 0.47      
 workplace        & professional       & 0.01        & 0.17          & 0.51           \\
 writers          & life-arts          & -0.01       & 0.08          & 0.43           \\ \bottomrule
 
-\caption[Sumário dos registros ao longo do tempo]{Para cada comunidade apresentamos nesta tabela sua categoria e os resultados da regressão simples onde verificamos se a proporção de registros provenientes de mulheres tem aumentado ao longo do tempo. Especificamente, são mostrados o coeficiente do modelo, o p-valor e o $r^2$ da regressão.}
+\caption[Resultados estatísticos para os registros ao longo do tempo]{Para cada comunidade apresentamos nesta tabela sua categoria e os resultados da regressão simples onde verificamos se a proporção de registros provenientes de mulheres tem aumentado ao longo do tempo. Especificamente, são mostrados o coeficiente do modelo, o p-valor do coeficiente e o $R^2$ da regressão.}
 \end{longtabu}
