--- a/modelo_copin/discussao.tex
+++ b/modelo_copin/discussao.tex
@@ -35,7 +35,7 @@ Se olharmos para comunidades de áreas de \emph{STEM} que são conhecidas por te
 \begin{figure}
   \centering
   \includegraphics[height=0.65\paperheight]{figures/ux.pdf}
-  \caption[Distribuição das variáveis para o site \emph{User Experience}]{Distribuição das variáveis para o site \emph{StackOverflow}. Mostramos um histograma do log do valor da variável mais um para as variáveis discretas e a gráfico da função de densidade, para as variáveis contínuas. }~\label{fig:ux}
+  \caption[Distribuição das variáveis para o site \emph{User Experience}]{Distribuição das variáveis para o site \emph{User Experience}. Mostramos um histograma do log do valor da variável mais um para as variáveis discretas e a gráfico da função de densidade, para as variáveis contínuas. }~\label{fig:ux}
 \end{figure}
 
 Ver que mulheres têm aumentado sua proporção de contribuições ao longo do tempo, principalmente em comunidades sobre assuntos relacionados à \emph{STEM}, nos dá uma esperança que a barreira que existe para que mulheres entrem e contribuam para estas comunidades esteja diminuindo. Já que outras comunidades, como as comunidades \emph{FOSS}~\cite{powell2010gender}, mulheres que já estão envolvidas tendem a continuar fazendo parte dela. Uma maneira de aumentar a autoconfiança destas mulheres quanto ao seu conhecimento também é essencial para aumentar estas proporções, já que elas mesmas consideram ter autoconfiança algo essencial para se manter em comunidades que elas são maioria~\cite{powell2010gender}.
