--- a/modelo_copin/introducao.tex
+++ b/modelo_copin/introducao.tex
@@ -2,7 +2,7 @@
 \chapter{Introdução}
 \label{ch:intro}
 
-Nos últimos anos, fontes de informação colaborativa online têm adquirido a sua importância no meio web por seu conteúdo confiável e de fácil acesso. Podemos destacar, dentre tantas outras, a \emph{Wikipedia}, \emph{Yahoo Answers} e os sites da plataforma \emph{StackExchange}. Esta última, apesar das suas mais de 100 comunidades, destaca-se no campo de \emph{STEM} (\emph{Science, Technology, Engineering and Mathematics}), com comunidades com mais de 4 milhões de usuários. 
+Nos últimos anos, fontes de informação colaborativa online têm adquirido a sua importância no meio web por seu conteúdo confiável e de fácil acesso. Tais fontes nada mais são do que sites ou aplicativos que podem ser acessados via internet e todo o seu conteúdo provém dos seus usuários. Podemos destacar, dentre tantas outras, a \emph{Wikipedia}, \emph{Yahoo Answers} e os sites da plataforma \emph{StackExchange}. Estes dois últimos pertencem a uma categoria específica de fonte de informação colaborativa -- são comunidades de perguntas e respostas online. Estas comunidades são fontes de informação colaborativa online onde a toda a dinâmica de construção da informação se dá através de perguntas e respostas. A plataforma \emph{StackExchange}, foco do nosso estudo, apesar das suas mais de 100 comunidades de perguntas e respostas, destaca-se no campo de \emph{STEM} (\emph{Science, Technology, Engineering and Mathematics}), com comunidades com mais de 4 milhões de usuários. 
 
 Sabendo que o conteúdo destas comunidades de perguntas e respostas é criado por voluntários, estes sites são extremamente dependentes da adoção e contribuição de seus usuários. Assim como a variedade no conteúdo, a diversidade de visões de um certo assunto no conteúdo da comunidade também depende da diversidade dos usuários voluntários.
 
@@ -12,9 +12,9 @@ A motivação inicial para este estudo foi um receio por parte dos pesquisadores
 
 Com a divulgação dos relatórios de diversidade por parte de grandes companhias como \emph{Google}~\cite{google:report} e \emph{Linkedin}~\cite{linkedin:report} mostrando que a proporção de mulheres em cargos de liderança é baixo, associamos logo às comunidades \emph{Open Source} que apresentam números parecidos~\cite{rustad2011suck}. É possível que estes dados estejam relacionados, visto que tanto as companhias quanto as comunidades \emph{Open Source} focam no desenvolvimento de software.
 
-Por fim, chegamos às comunidades de perguntas e respostas, como o \emph{StackExchange} onde resultados recentes mostram que mulheres são uma minoria extrema dentre os contribuidores do \emph{StackOverflow}~\cite{Vasilescu27092013}, a maior comunidade dentro da plataforma \emph{StackExchange}. Ademais, nota-se que pessoas que questionam a razão do \emph{gender gap} no \emph{StackOverflow} podem ser mal entendidas e até distratadas\footnote{http://is.gd/eAnI8R}, tendo os outros membros o acusando de preconceito. Isto é preocupante, pois existe uma problema de balanço de diversidade, não se sabe a razão e a própria comunidade não parece estar disposta a examinar causas e consequências.
+Por fim, chegamos às comunidades de perguntas e respostas, como o \emph{StackExchange} onde resultados recentes mostram que mulheres são uma minoria extrema dentre os contribuidores do \emph{StackOverflow}~\cite{Vasilescu27092013}, a maior comunidade dentro da plataforma \emph{StackExchange}, chegando a representar apenas 7\& dos usuários que contribuem para o site. Ademais, nota-se que pessoas que questionam a razão do \emph{gender gap} no \emph{StackOverflow} podem ser mal entendidas e até distratadas\footnote{http://is.gd/eAnI8R}, tendo os outros membros as acusando de preconceito. Isto é preocupante, pois existe uma problema de balanço de diversidade, não se sabe a razão e a própria comunidade não parece estar disposta a examinar causas e consequências.
 
-Tais fatos coincidem com estereótipos comuns de mulheres em campos de \emph{STEM}~\cite{spencer1999stereotype} assim como a baixa influência que mulheres possuem em grupos que onde há homens e mulheres ~\cite{karpowitz2012gender}. Contudo, se mulheres realmente são influenciadas a contribuir menos que homens nestas comunidades, os sites do \emph{StackExchange} podem estar perdendo não só contribuidores de qualidade, mas também a oportunidade de produzir conteúdo que representa as visões de ambos os gêneros. Além de, ter um melhor funcionamento, sendo uma comunidade com grupos de gêneros distintos~\cite{marshall1975boys}.
+Tais fatos coincidem com estereótipos comuns de mulheres em campos de \emph{STEM}~\cite{spencer1999stereotype} assim como a baixa influência que mulheres possuem em grupos que onde há homens e mulheres ~\cite{karpowitz2012gender}. Contudo, se mulheres realmente são influenciadas a contribuir menos que homens nestas comunidades, os sites do \emph{StackExchange} podem estar perdendo não só contribuidores de qualidade, mas também a oportunidade de produzir conteúdo que representa as visões de ambos os gêneros. Além de, estes sites apresentarem um melhor funcionamento, sendo uma comunidade com grupos de gêneros distintos~\cite{marshall1975boys}.
 
 
 \section{Objetivos}
@@ -23,20 +23,19 @@ Apesar de estudos anteriores apontarem que a fração de contribuidoras é bem m
 
 Verificamos que, dentro da literatura, não há um estudo que observe os usuários das comunidades do \emph{StackExchange} com relação às características citadas acima e ainda faça um comparativo com estudos de gênero não só no contexto de comunidades online, mas também em ambientes offline, relacionando as diferenças e semelhanças encontrados nos demais estudos com relação a interação e competitividade das pessoas de diferentes gêneros e os comportamentos observados nos sites estudados.
 
-Portanto, esta pesquisa tem como objetivo estudar as consequências no comportamento de um usuário que identifica seu gênero em comunidades do \emph{StackExchange}. Para atingir o nosso objetivo, estudamos usuários que participaram da comunidade, os quais pudemos identificar seu gênero facilmente. Destes, os seguintes aspectos foram analisados: participação, qualidade das contribuições, tempo ativo na comunidade, contribuições ao longo do tempo. Mais ainda, estudamos como se comporta a proporção de registros por cada gênero, em cada comunidade, ao longo do tempo.
+Portanto, esta pesquisa tem como objetivo estudar as consequências no comportamento de um usuário que identifica seu gênero em comunidades do \emph{StackExchange}. Para atingir o nosso objetivo, estudamos usuários que participaram da comunidade, os quais pudemos identificar seu gênero facilmente. Destes, os seguintes aspectos foram analisados: participação, qualidade das contribuições, tempo ativo na comunidade e contribuições ao longo do tempo. Mais ainda, estudamos como se comporta a proporção de novos registros por cada gênero, em cada comunidade, ao longo do tempo.
 
 
-\section{A questão de pesquisa}
-% -perguntas de pesquisa, etc
-No contexto das comunidades da plataforma \emph{StackExchange}, quisemos entender melhor como se dá a diferença de comportamento entre homens e mulheres que participam destes sites. Para isto, a primeira medida que tomamos foi a de identificar automaticamente o gênero dos usuários que contribuíram de alguma forma para qualquer um dos sites. Utilizamos um classificador para que obtivéssemos o maior número de usuários identificados de uma maneira praticável.
+\section{Abordagem de pesquisa}
+No contexto dos sites da plataforma \emph{StackExchange}, quisemos entender melhor como se dá a diferença de comportamento entre homens e mulheres que participam da plataforma. Para isto, a primeira medida que tomamos foi a de identificar automaticamente o gênero dos usuários que contribuíram de alguma forma para qualquer um dos sites. Utilizamos um classificador para que obtivéssemos o maior número de usuários identificados de uma maneira praticável.
 
-Após esta primeira etapa, procuramos entender a diferença de comportamento respondendo à seguinte pergunta de pesquisa: \emph{} E, para respondê-la, a dividimos em quatro subperguntas de pesquisa para estudar aspectos distintos do comportamento dos usuários.
+Após esta primeira etapa, procuramos entender a diferença de comportamento respondendo à seguinte pergunta de pesquisa: \emph{Como se dá (caso existente) a diferença de comportamento entre homens e mulheres nos sites do StackExchange?} E, para respondê-la, a dividimos em quatro subperguntas de pesquisa para estudar aspectos distintos do comportamento dos usuários.
 
 A primeira questão que nos vem a mente quando comparamos comportamento de contribuições é quanto ao número de contribuições realizada por cada usuário. A primeira subpergunta é \textit{O número de contribuições feitas por homens e por mulheres difere significantemente nas comunidades observadas?} Onde tivemos a oportunidade de analisar e comparar a quantidade de cada tipo de contribuição (perguntas, respostas e comentários) realizadas por cada usuário de cada gênero.
 
 Um aspecto importante a ser estudado é como os usuários percebem a qualidade uns dos outros, para isto temos a segunda subpergunta: \textit{As contribuições feitas por diferentes gêneros são vistas, pela comunidade, com níveis de qualidade diferentes?} E, para estudar o engajamento dos usuários, analisamos o tempo de vida na comunidade e frequência de postagem, respondendo à terceira subpergunta: \textit{O engajamento de homens e mulheres difere nas comunidades estudadas?}
 
-Por fim, para estudar como as contribuições e registros realizados por usuários de cada gênero têm se dado ao longo do tempo, fizemos a quarta e última pergunta de pesquisa: \textit{A proporção de contribuições e registros feitos por usuários de cada gênero tem aumentado ou reduzido ao longo do tempo?}
+Por fim, para estudar como as contribuições e novos registros realizados por usuários de cada gênero têm se dado ao longo do tempo, fizemos a quarta e última pergunta de pesquisa: \textit{A proporção de contribuições e novos registros feitos por usuários de cada gênero tem aumentado ou reduzido ao longo do tempo?}
 
 
 \section{Resultados}
