--- a/modelo_copin/resultados.tex
+++ b/modelo_copin/resultados.tex
@@ -70,7 +70,7 @@ Nós também notamos que as maiores diferenças entre os gêneros quanto ao temp
 Com relação à frequência, um padrão diferente pode ser observado. Em todos os sete sites relacionados a \emph{STEM} que apresentaram diferença estatística com relação à frequência de atividade, mulheres contribuem mais frequentemente do que homens. Assimilando isto com o resultado relacionado ao tempo de vida, podemos inferir que, apesar que mulheres deixam a comunidade antes que os homens, elas contribuem mais enquanto durante o tempo que ainda estão associadas ao site.
 
 
-\section{Contribuições e registros ao longo do tempo}
+\section{Contribuições e novos registros ao longo do tempo}
 Observando as contribuições de homens e mulheres ao longo do tempo notamos que em, aproximadamente, um quarto dos sites estudados a proporção das contribuições provenientes de mulheres está aumentando ($20/60/5$). Apesar de não tão evidente, das comunidades que apresentaram diferença estatística quanto aos registos feitos por homens e mulheres ao longo do tempo é possível ver um padrão: os registros de mulheres têm aumentado ($8/76/1$). Ambos resultados são mais visíveis se considerarmos apenas os sites relacionados a \emph{STEM}: $16/25/3$ para contribuições ao longo do tempo e $6/38/0$ para a proporção de novos registros.
 
 \section{Focando nos maiores sites} 
