--- a/modelo_copin/app/q3.tex
+++ b/modelo_copin/app/q3.tex
@@ -1,11 +1,11 @@
 %!TEX root = ../main_mestrado.tex
-\chapter{Sumário da terceira pergunta de pesquisa}
+\chapter{Resultados estatísticos para a terceira pergunta de pesquisa}
 \label{app:q3}
 
 \small
 
-* = Diferença entre médias. \\
-** = Diferença entre medianas. \\
+* = Diferença entre a média das mulheres e a média dos homens. \\
+*** = Diferença entre a mediana das mulheres e a mediana dos homens. \\
 **** = \textit{P-valor} do teste de hipótese utilizado. 
 \begin{longtabu}{@{}
 	p{0.17\linewidth}
@@ -111,5 +111,5 @@ wordpress        & technology         & 0.13           & 0.23           & 0.02  
 workplace        & professional       & 0.00           & 0.25           & 0.21   & 2.89              & 0.24             \\
 writers          & life-arts          & -0.05          & 0.00           & 0.91   & 1.12              & 0.53             \\ \bottomrule
 
-\caption[Sumário do tempo de dedicação à comunidade]{Para cada comunidade apresentamos nesta tabela sua categoria, a diferença da média de respostas / comentários / contribuições / perguntas realizadas por usuários de cada gênero; a diferença da mediana de respostas / comentários / contribuições / perguntas realizadas por usuários de cada gênero; e o \textit{p-valor} obtido utilizando o Mann-Whitney-U test, para cada tipo de contribuição, para cada gênero.}
+\caption[Resultados estatísticos para o tempo de dedicação à comunidade]{Para cada comunidade apresentamos nesta tabela sua categoria, a diferença entre a média de mulheres e homens quanto a frequência de contribuição feita por usuários de cada gênero; a diferença entre a mediana de mulheres e homens quanto a sua frequência de contribuição e tempo de vida dos usuários de cada gênero; e o \textit{p-valor} obtido utilizando o Mann-Whitney-U test, para cada tipo de contribuição, para cada gênero.}
 \end{longtabu}
